--- a/AGataDoDia/Pimp/pimp/app/views/languages/edit.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/languages/edit.scala.html
@@ -5,43 +5,42 @@
 
 @title = {}
 
-@main(title = "Editar Language", nav = "create") {
+@main(title = Messages("languages.edit"), nav = "create") {
 
     @if(languageViewForm.hasErrors) {
         <div class="alert alert-dismissable alert-danger">
             <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong>Oh snap!</strong> <a href="javascript:void(0)" class="alert-link">Change a few things up</a> and try submitting again.
+            <strong>@Messages("generic.error.title")</strong> @Messages("generic.error.content")
             <p>@languageViewForm.errorsAsJson</p>
         </div>
     }
 
-    <h1>Edit Language</h1>
 
     @helper.form(controllers.routes.LanguagesView.update(id), 'enctype -> "multipart/form-data") {
 
     <fieldset>
-        <legend>Informacion del language</legend>
+        <legend>@Messages("languages.info")</legend>
 
         @inputText(
             languageViewForm("name"),
-            '_label -> "Name",
-            '_help -> "Ingrese un nombre válido.",
+            '_label -> Messages("languages.name"),
+            '_help -> Messages("languages.name.help"),
             'class -> "form-control",
             '_error -> languageViewForm.globalError
         )
 
         @inputText(
             languageViewForm("shortName"),
-            '_label -> "Short Name",
-            '_help -> "Ingrese un nombre válido.",
+            '_label -> Messages("languages.shortname"),
+            '_help -> Messages("languages.shortname.help"),
             'class -> "form-control",
             '_error -> languageViewForm.globalError
         )
 
         @inputText(
             languageViewForm("active"),
-            '_label -> "Active",
-            '_help -> "Ingrese 0 o 1.",
+            '_label -> Messages("languages.active"),
+            '_help -> Messages("languages.active.help"),
             'class -> "form-control",
             '_error -> languageViewForm.globalError
         )
@@ -52,14 +51,14 @@
     </fieldset>
 
     <div class="actions">
-        <input type="submit" value="Actualizar este language" onclick="return confirm('¿Por favor confirmar que desea actualizar la información del language?');" class="btn btn-success">
-        <a href="@controllers.routes.LanguagesView.list()" class="btn btn-primary">Cancelar</a>
+        <input type="submit" value=@Messages("languages.submit.update") class="btn btn-success">
+        <a href="@controllers.routes.LanguagesView.list()" class="btn btn-primary">@Messages("generic.cancel")</a>
     </div>
 
     }
 
     @form(controllers.routes.LanguagesView.delete(id), 'class -> "topRight") {
-        <input type="submit" value="Eliminar este Language" onclick="return confirm('¿Por favor confirmar que desea eliminar la información de este language?');" class="btn btn-danger">
+        <input type="submit" value=@Messages("languages.submit.delete") class="btn btn-danger">
 
     }
 
