--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -225,45 +225,45 @@
 				<div class="navbar-header">
                     <div class="navbar-collapse collapse navbar-responsive-collapse">
                         <ul class="nav navbar-nav">
-                            <a class="navbar-brand" href="@controllers.routes.Application.index()">Inicio</a>
+                            <a class="navbar-brand" href="@controllers.routes.Application.index()">@Messages("main.start")</a>
 
                             <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Mujeres<b class="caret"></b></a>
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.women")<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.WomenView.list()">Listar</a></li>
+                                    <li><a href="@controllers.routes.WomenView.list()">@Messages("main.list")</a></li>
                                     <li class="divider"></li>
-                                    <li class="dropdown-header">Operaciones</li>
-                                    <li><a href="@controllers.routes.WomenView.blank">Crear</a></li>
+                                    <li class="dropdown-header">@Messages("main.operations")</li>
+                                    <li><a href="@controllers.routes.WomenView.blank">@Messages("main.create")</a></li>
                                 </ul>
                             </li>
 
                             <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Post<b class="caret"></b></a>
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.posts")<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.PostsView.list()">Listar</a></li>
+                                    <li><a href="@controllers.routes.PostsView.list()">@Messages("main.list")</a></li>
                                     <li class="divider"></li>
-                                    <li class="dropdown-header">Operaciones</li>
-                                    <li><a href="@controllers.routes.PostsView.blank">Crear</a></li>
+                                    <li class="dropdown-header">@Messages("main.operations")</li>
+                                    <li><a href="@controllers.routes.PostsView.blank">@Messages("main.create")</a></li>
                                 </ul>
                             </li>
 
                             <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Languages<b class="caret"></b></a>
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.languages")<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.LanguagesView.list()">Listar</a></li>
+                                    <li><a href="@controllers.routes.LanguagesView.list()">@Messages("main.list")</a></li>
                                     <li class="divider"></li>
-                                    <li class="dropdown-header">Operaciones</li>
-                                    <li><a href="@controllers.routes.LanguagesView.blank">Crear</a></li>
+                                    <li class="dropdown-header">@Messages("main.operations")</li>
+                                    <li><a href="@controllers.routes.LanguagesView.blank">@Messages("main.create")</a></li>
                                 </ul>
                             </li>
 
                             <li class="dropdown">
-                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Countries<b class="caret"></b></a>
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">@Messages("main.countries")<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="@controllers.routes.CountriesView.list()">Listar</a></li>
+                                    <li><a href="@controllers.routes.CountriesView.list()">@Messages("main.list")</a></li>
                                     <li class="divider"></li>
-                                    <li class="dropdown-header">Operaciones</li>
-                                    <li><a href="@controllers.routes.CountriesView.blank">Crear</a></li>
+                                    <li class="dropdown-header">@Messages("main.operations")</li>
+                                    <li><a href="@controllers.routes.CountriesView.blank">@Messages("main.create")</a></li>
                                 </ul>
                             </li>
 
