--- a/AGataDoDia/Pimp/pimp/app/views/posts/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/posts/list.scala.html
@@ -37,7 +37,7 @@
 
 @title = {}
 
-@main(title = "Posts", nav = "") {
+@main(title = Messages("post.list.head"), nav = "") {
 <div class="bs-docs-section">
 
     <div class="row">
@@ -49,11 +49,11 @@
     <!--DIALOG-->
     @if(flash.containsKey("success")) {
     <div class="alert-message warning">
-        <strong>Hecho!</strong> @flash.get("success")
+        <strong>@Messages("generic.list.done")</strong> @flash.get("success")
     </div>
     }
     <div id="alert" class="alert-message warning" style="display: none; ">
-        <strong>Hecho!</strong>
+        <strong>@Messages("generic.list.done")</strong>
     </div>
 
     <!--ACTIONS-->
@@ -62,15 +62,15 @@
 
             @if(!sortView) {
                 <div class="col-lg-6">
-                    <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder="Filtrar por nombre de la post...">
+                    <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("post.list.filter.name")>
                 </div>
                 <div class="col-lg-6">
-                    <input type="submit" id="searchsubmit" value="Filtrar por nombre" class="btn primary">
+                    <input type="submit" id="searchsubmit" value=@Messages("post.list.filter.name") class="btn btn-info">
                 </div>
             }
 
             @if(sortView) {
-                <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/posts/sort/" >Aplicar</a>
+                <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/posts/sort/" >@Messages("generic.list.apply")</a>
             }
 
         </form>
@@ -79,7 +79,7 @@
     @if(currentPage.getTotalRowCount == 0) {
 
         <div class="well">
-            <em>No hay nada que mostrar</em>
+            <em>@Messages("generic.list.empty")</em>
         </div>
 
     } else {
@@ -125,27 +125,27 @@
             <ul class="pager">
 
                 @if(currentPage.hasPrev) {
-                <li class="previous">
-                    <a href="@link(currentPage.getPageIndex - 1, null)">← Anterior</a>
-                </li>
+                    <li class="previous">
+                        <a href="@link(currentPage.getPageIndex - 1, null)">← @Messages("generic.list.previous")</a>
+                    </li>
                 } else {
-                <li class="previous disabled">
-                    <a href="javascript:void(0)">← Anterior</a>
-                </li>
+                    <li class="previous disabled">
+                        <a href="javascript:void(0)">← @Messages("generic.list.previous")</a>
+                    </li>
                 }
 
                 <li class="current">
-                    <a>Listando del @currentPage.getDisplayXtoYofZ(" al "," de ")</a>
+                    <a>@Messages("generic.list.listing") @currentPage.getDisplayXtoYofZ(" "+Messages("generic.list.through")+" ",  " "+Messages("generic.list.of")+" ")</a>
                 </li>
 
                 @if(currentPage.hasNext) {
-                <li class="next">
-                    <a href="@link(currentPage.getPageIndex + 1, null)">Pr&oacute;ximo →</a>
-                </li>
+                    <li class="next">
+                        <a href="@link(currentPage.getPageIndex + 1, null)">@Messages("generic.list.next") →</a>
+                    </li>
                 } else {
-                <li class="next disabled">
-                    <a href="javascript:void(0)">Pr&oacute;ximo →</a>
-                </li>
+                    <li class="next disabled">
+                        <a href="javascript:void(0)">@Messages("generic.list.next") →</a>
+                    </li>
                 }
 
 
@@ -154,7 +154,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <a href="@controllers.routes.PostsView.blank" class="btn btn-primary">Agregar nuevo Post</a>
+            <a href="@controllers.routes.PostsView.blank" class="btn btn-primary">@Messages("post.list.new")</a>
         </div>
     </div>
 
