--- a/AGataDoDia/Pimp/pimp/app/views/women/form.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/women/form.scala.html
@@ -7,44 +7,43 @@
 
 @categoryGroup(field: Field, className: String = "category") = {
     <div class="twipsies well @className">
-        <a class="removeCategory btn btn-primary danger pull-right">Remove this Category: @Html(""+field("category.name").value.getOrElse("NONE"))</a>
+        <a class="removeCategory btn btn-primary danger pull-right">@Messages("women.category.remove")</a>
         @select(
-        field("category"),
-        models.content.women.Category.toSeq,
-        '_label -> "Categoria",
-        'class -> "form-control"
+            field("category"),
+            models.content.women.Category.toSeq,
+            '_label -> Messages("women.category"),
+            'class -> "form-control"
         )
-        <!--Faltan unas cosas de POSTS -->
     </div>
 }
 
 @socialNetworkGroup(field: Field, className: String = "socialNetwork") = {
     <div class="twipsies well @className">
-        <a class="removeSocialNetwork btn btn-primary danger pull-right">Remove this Social Network: @Html(""+field("category.name").value.getOrElse("NONE"))</a>
+        <a class="removeSocialNetwork btn btn-primary danger pull-right">@Messages("women.socialnetwork.remove")</a>
         @select(
             field("socialNetwork"),
             models.content.women.SocialNetwork.toSeq,
-            '_label -> "Categoria",
+            '_label -> Messages("women.socialnetwork"),
             'class -> "form-control"
         )
-        @input(field("link"), '_label -> "Link") { (id, name, value, _) =>
+        @input(field("link"), '_label -> Messages("women.socialnetwork.link")) { (id, name, value, _) =>
             <input type="text" name="@name" value="@value" class="form-control" >
         }
     </div>
 }
 
-@main(title = "Crear Mujer", nav = "create") {
+@main(title = Messages("women.create"), nav = "create") {
     
      @if(flash.containsKey("success")) {
         <div class="alert-message warning">
-            <strong>Error!</strong> @flash.get("success")
+            <strong>@Messages("generic.error.title")</strong> @flash.get("success")
         </div>
     }
 
     @if(womenViewForm.hasErrors) {
         <div class="alert alert-dismissable alert-danger">
             <button type="button" class="close" data-dismiss="alert">×</button>
-            <strong>Oh snap!</strong> <a href="javascript:void(0)" class="alert-link">Change a few things up</a> and try submitting again.
+            <strong>@Messages("generic.error.title")</strong> @Messages("generic.error.content")
             <p>@womenViewForm.errorsAsJson</p>
         </div>
     }
@@ -53,45 +52,30 @@
     @helper.form(action = controllers.routes.WomenView.submit, 'enctype -> "multipart/form-data", 'id -> "form") {
         
         <fieldset>
-            <legend>Informacion de la mujer</legend>
+            <legend>@Messages("women.info")</legend>
 
             @inputText(womenViewForm("name"),
-            '_label -> "Nombre",
-            '_help -> "Ingrese un nombre válido.",
+            '_label -> Messages("women.name"),
+            '_help -> Messages("women.name.help"),
             'class -> "form-control",
             '_error -> womenViewForm.globalError)
 
 
 
-            @if(womenViewForm("defaultPhoto").value == null || womenViewForm("defaultPhoto").value.equals("")){
-                <div class="form-group">
-                    <label for="inputFile" class="col-lg-2 control-label">File</label>
-                    <div class="col-lg-10">
-                        @input(womenViewForm("defaultPhoto"), '_label -> "Image") { (id, name, value, _) =>
-                            <input type="text" name="@name" value="@value" readonly="" class="form-control floating-label" placeholder="Browse...">
-                            <input type="file" name="@name" value="@value" id="inputFile" multiple="">
-                        }
-                    </div>
-                </div>
-            } else {
-                <div class="col-lg-4">
-                    @input(womenViewForm("defaultPhoto"), '_label -> "Foto default") { (id, name, value, _) =>
-                        <img class="img-rounded" src="@value" alt="icon" name="@name" style="width: 100px; height: 100px;" >
+            <div class="form-group">
+                <label for="inputFile" class="col-lg-2 control-label">@Messages("women.image")</label>
+                <div class="col-lg-10">
+                    @input(womenViewForm("defaultPhoto"), '_label -> Messages("women.image.file")) { (id, name, value, _) =>
+                        <input type="text" name="@name" value="@value" readonly="" class="form-control floating-label" placeholder="Browse...">
+                        <input type="file" name="@name" value="@value" id="inputFile" multiple="">
                     }
                 </div>
+            </div>
 
-                <div class="col-lg-8">
-                    @inputText(womenViewForm("defaultPhoto"),
-                    '_label -> "Foto URL",
-                    '_help -> "Ingrese una url válida.",
-                    'class -> "form-control",
-                    '_error -> womenViewForm.globalError)
-                </div>
-            }
 
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Categories</h2>
+                    <h2>@Messages("women.category.plural")</h2>
                 </div>
             </div>
             <div id="categories">
@@ -107,11 +91,16 @@
                 )
 
                 <div class="manage">
-                    <a class="addCategory btn btn-primary success">Add another category</a>
+                    <a class="addCategory btn btn-primary success">@Messages("women.category.add")</a>
                 </div>
 
             </div>
 
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>@Messages("women.socialnetwork.plural")</h2>
+                </div>
+            </div>
             <div id="socialNetworks">
 
                 @repeat(womenViewForm("socialNetworks")) { socialNetwork =>
@@ -125,7 +114,7 @@
                 )
 
                 <div class="manage">
-                    <a class="addSocialNetworks btn btn-primary success">Add another Social Networks</a>
+                    <a class="addSocialNetworks btn btn-primary success">@Messages("women.socialnetwork.add")</a>
                 </div>
 
             </div>
@@ -133,8 +122,8 @@
         </fieldset>
 
         <div class="actions">
-            <input type="submit" class="btn primary" value="Crear este mujer">
-            <a href="@controllers.routes.WomenView.list()" class="btn">Cancelar</a>
+            <input type="submit" class="btn btn-success" value=@Messages("post.submit.create")>
+            <a href="@controllers.routes.WomenView.list()" class="btn btn-primary">@Messages("generic.cancel")</a>
         </div>
         
     }
