--- a/AGataDoDia/Pimp/pimp/app/views/women/list.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/women/list.scala.html
@@ -37,7 +37,7 @@
 
 @title = {}
 
-@main(title = "mujeres", nav = "") {
+@main(title = Messages("women.list.head"), nav = "") {
     <div class="bs-docs-section">
 
         <div class="row">
@@ -48,12 +48,12 @@
 
         <!--DIALOG-->
         @if(flash.containsKey("success")) {
-        <div class="alert-message warning">
-            <strong>Hecho!</strong> @flash.get("success")
-        </div>
+            <div class="alert-message warning">
+                <strong>@Messages("generic.list.done")</strong> @flash.get("success")
+            </div>
         }
         <div id="alert" class="alert-message warning" style="display: none; ">
-            <strong>Hecho!</strong>
+            <strong>@Messages("generic.list.done")</strong>
         </div>
 
         <!--ACTIONS-->
@@ -62,16 +62,16 @@
 
                 @if(!sortView) {
                 <div class="col-lg-6">
-                    <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder="Filtrar por nombre de la mujer...">
+                    <input type="search" class="form-control floating-label" id="searchbox" name="f" placeholder=@Messages("women.list.filter.name")>
                 </div>
                 <div class="col-lg-6">
-                    <input type="submit" id="searchsubmit" value="Filtrar por nombre" class="btn primary">
+                    <input type="submit" id="searchsubmit" value=@Messages("women.list.filter.name") class="btn btn-info">
                 </div>
 
                 }
 
                 @if(sortView) {
-                <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/women/sort/" >Aplicar</a>
+                <a class="btn success" id="ajax" href="#" data-url="/garotas/v1/women/sort/" >@Messages("generic.list.apply")</a>
                 }
 
             </form>
@@ -80,7 +80,7 @@
         @if(currentPage.getTotalRowCount == 0) {
 
         <div class="well">
-            <em>No hay nada que mostrar</em>
+            <em>@Messages("generic.list.empty")</em>
         </div>
 
         } else {
@@ -92,13 +92,13 @@
                         <div class="list-group-item">
                             <a href="@controllers.routes.WomenView.edit(women.getIdWoman())">
                                 @if(women.getDefaultPhoto() != null && women.getDefaultPhoto() != "") {
-                                <div class="row-picture">
-                                    <img class="circle" src="@women.getDefaultPhoto()" alt="icon">
-                                </div>
+                                    <div class="row-picture">
+                                        <img class="circle" src="@women.getDefaultPhoto()" alt="icon">
+                                    </div>
                                 } else {
-                                <div class="row-action-primary">
-                                    <i class="icon-material-photo"></i>
-                                </div>
+                                    <div class="row-action-primary">
+                                        <i class="icon-material-photo"></i>
+                                    </div>
                                 }
 
                                 <div class="row-content">
@@ -127,27 +127,27 @@
                 <ul class="pager">
 
                     @if(currentPage.hasPrev) {
-                    <li class="previous">
-                        <a href="@link(currentPage.getPageIndex - 1, null)">← Anterior</a>
-                    </li>
+                        <li class="previous">
+                            <a href="@link(currentPage.getPageIndex - 1, null)">← @Messages("generic.list.previous")</a>
+                        </li>
                     } else {
-                    <li class="previous disabled">
-                        <a href="javascript:void(0)">← Anterior</a>
-                    </li>
+                        <li class="previous disabled">
+                            <a href="javascript:void(0)">← @Messages("generic.list.previous")</a>
+                        </li>
                     }
 
                     <li class="current">
-                        <a>Listando del @currentPage.getDisplayXtoYofZ(" al "," de ")</a>
+                        <a>@Messages("generic.list.listing") @currentPage.getDisplayXtoYofZ(" "+Messages("generic.list.through")+" ",  " "+Messages("generic.list.of")+" ")</a>
                     </li>
 
                     @if(currentPage.hasNext) {
-                    <li class="next">
-                        <a href="@link(currentPage.getPageIndex + 1, null)">Pr&oacute;ximo →</a>
-                    </li>
+                        <li class="next">
+                            <a href="@link(currentPage.getPageIndex + 1, null)">@Messages("generic.list.next") →</a>
+                        </li>
                     } else {
-                    <li class="next disabled">
-                        <a href="javascript:void(0)">Pr&oacute;ximo →</a>
-                    </li>
+                        <li class="next disabled">
+                            <a href="javascript:void(0)">@Messages("generic.list.next") →</a>
+                        </li>
                     }
 
 
@@ -156,7 +156,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <a href="@controllers.routes.WomenView.blank" class="btn btn-primary">Agregar nueva mujer</a>
+                <a href="@controllers.routes.WomenView.blank" class="btn btn-primary">@Messages("women.list.new")</a>
             </div>
         </div>
 
